--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "0x8395f7",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/lemon-mint/x8395f7/issues"
   },
-  "homepage": "https://github.com/lemon-mint/x8395f7#readme"
+  "homepage": "https://github.com/lemon-mint/x8395f7#readme",
+  "devDependencies": {
+    "typescript": "^4.9.3"
+  }
 }
