--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   },
   "homepage": "https://github.com/lemon-mint/x8395f7#readme",
   "devDependencies": {
-    "typescript": "^4.9.3"
+    "@types/node": "^18.11.17",
+    "prettier": "2.8.1",
+    "typescript": "^4.9.4"
   },
   "dependencies": {
     "wyhash": "^0.0.3"
